Update Spam SMS Detection.ipynb

--- a/Spam SMS Detection.ipynb
+++ b/Spam SMS Detection.ipynb
@@ -18,12 +18,8 @@
     "<br>\n",
     "Myself, Aayushi Gupta , \n",
     "<br>\n",
-    "Machine Learning Intern at CODSOFT, INDIA\n",
-    "<br>\n",
-    "</b>\n",
-    "This is my third task at CODSOFT INTERNSHIP (November 25,2023 to December 25,2023)\n",
-    "<br>\n",
-    "PRESENTING TO YOU --- SPAM SMS DETECTION MODEL(Task 4 in the list)\n",
+    
+    "PRESENTING TO YOU --- SPAM SMS DETECTION MODEL\n",
     "\n"
    ]
   },
@@ -34,11 +30,10 @@
    "source": [
     "<b>TASK-</b> \n",
     "<br>\n",
-    "Create a machine learning model that can predict the genre of a\n",
-    "movie based on its plot summary or other textual information. You\n",
-    "can use techniques like TF-IDF or word embeddings with classifiers\n",
-    "such as Naive Bayes, Logistic Regression, or Support Vector\n",
-    "Machines.\n"
+    " A machine learning model that can classify SMS messages as spam or
+legitimate.\n",
+    "Using techniques like TF-IDF or word embeddings with classifiers\n",
+    "like Naive Bayes\n"
    ]
   },
   {
