Update Spam SMS Detection.ipynb

--- a/Spam SMS Detection.ipynb
+++ b/Spam SMS Detection.ipynb
@@ -30,8 +30,7 @@
    "source": [
     "<b>TASK-</b> \n",
     "<br>\n",
-    " A machine learning model that can classify SMS messages as spam or
-legitimate.\n",
+    " A machine learning model that can classify SMS messages as spam or legitimate.\n",
     "Using techniques like TF-IDF or word embeddings with classifiers\n",
     "like Naive Bayes\n"
    ]
